--- a/.github/workflows/reusableWorkflowsUser.yml
+++ b/.github/workflows/reusableWorkflowsUser.yml
@@ -16,7 +16,7 @@ jobs:
         run: echo Hello, world!
 
   docker:
-    uses: n3wt0n/ReusableWorkflow/.github/workflows/buildAndPublishDockerImage.yml@main
+    uses: chitransh93/CompositeAction/action.yml@main
     with:
       image_name: my-awesome-app
       tag: $GITHUB_RUN_NUMBER
